# Suture

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  rustfmt.toml
.github/: CI_TRIGGER
.github/workflows/: ci.yml  format-snapshot.yml  release.yml
docs/: ARCHITECTURE.md  BUILDING.md  COMPATIBILITY.md  PROJECT_SPEC.md
packaging/: io.github.erik0318.Suture.desktop
packaging/macos/: Info.plist
packaging/windows/: Suture.iss
scripts/: package-appimage.sh  package-macos.sh  package-windows.ps1
src/: app.rs  lib.rs  main.rs  model.rs  settings.rs
src/media/: cd.rs  cover.rs  export.rs  mod.rs  probe.rs  scan.rs  sort.rs  tools.rs
src/ui/: progress.rs
