[package]
name = "suture"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Stitch ordered audio tracks into continuous audio or static-cover video"
license = "MIT"
repository = "https://github.com/Erik0318/Suture"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
directories = "6.0"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
open = "5.3"
regex = "1.11"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
thiserror = "2.0"
walkdir = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.9"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

